[tool.poetry]
name = "repl_python3_turnio-webhooks-hmacs-replit"
version = "0.1.0"
description = ""
authors = ["ShaunSephton <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
